--- a/index.html
+++ b/index.html
@@ -3,55 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Weather App | Sajidali</title>
+  <title>Weather App</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="manifest" href="manifest.json" />
-  <link rel="icon" href="https://openweathermap.org/img/wn/01d.png" />
-  <script>
-    function toggleDarkMode() {
-      document.body.classList.toggle("dark");
-      localStorage.setItem("theme", document.body.classList.contains("dark") ? "dark" : "light");
-    }
-
-    window.onload = function () {
-      if (localStorage.getItem("theme") === "dark") {
-        document.body.classList.add("dark");
-      }
-      getWeatherByLocation();
-    };
-  </script>
 </head>
 <body>
-  <button id="darkToggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
-
-  <div class="app">
-    <h1>Weather App</h1>
-    <div class="search-box">
-      <input type="text" id="cityInput" placeholder="Enter city name" />
-      <button onclick="getWeather()">Search</button>
+  <div class="container">
+    <div class="top-section">
+      <div class="location">Loading...</div>
+      <div class="temperature">--°</div>
+      <div class="weather-info">Fetching weather data...</div>
     </div>
 
-    <div id="loader" class="loader" style="display:none;"></div>
-    <div id="weatherResult" class="weather-card"></div>
+    <div class="forecast-section">
+      <h3>Hourly Forecast</h3>
+      <div class="forecast-hourly"></div>
+      <h3>Daily Forecast</h3>
+      <div class="forecast-daily"></div>
+    </div>
 
-    <section class="info-section">
-      <h2>About</h2>
-      <p>This app was built by <strong>Sajidali Momin</strong> using HTML, CSS, JavaScript, and the OpenWeather API. It supports city search, dark mode, geolocation, and App installation.</p>
-    </section>
+    <div class="stats">
+      <div class="stat">UV Index<br><span>--</span></div>
+      <div class="stat">Feels Like<br><span>--</span></div>
+      <div class="stat">Humidity<br><span>--</span></div>
+      <div class="stat">Wind<br><span>--</span></div>
+      <div class="stat">Pressure<br><span>--</span></div>
+      <div class="stat">Visibility<br><span>--</span></div>
+    </div>
 
-    <section class="info-section">
-      <h2>Contact</h2>
-      <p>Email: mominsajidali.play@gmail.com</p>
-      <p>GitHub: <a href="https://github.com/sajidali440" target="_blank">sajidali440</a></p>
-    </section>
+    <div class="sun-times">
+      <div>Sunset<br><span>--</span></div>
+      <div>Sunrise<br><span>--</span></div>
+    </div>
   </div>
 
   <script src="script.js"></script>
-  <script>
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js")
-        .then(() => console.log("Service Worker Registered"));
-    }
-  </script>
 </body>
 </html>
