--- a/index.html
+++ b/index.html
@@ -3,21 +3,55 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Modern Weather App</title>
+  <title>Weather App | Sajidali</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" href="https://openweathermap.org/img/wn/01d.png" />
+  <script>
+    function toggleDarkMode() {
+      document.body.classList.toggle("dark");
+      localStorage.setItem("theme", document.body.classList.contains("dark") ? "dark" : "light");
+    }
+
+    window.onload = function () {
+      if (localStorage.getItem("theme") === "dark") {
+        document.body.classList.add("dark");
+      }
+      getWeatherByLocation();
+    };
+  </script>
 </head>
 <body>
-  <div class="container">
-    <h1 id="location">Weather in Petlad</h1>
-    <h2 id="temperature">Loading...</h2>
-    <p id="description"></p>
-    <p id="humidity"></p>
-    <p id="wind"></p>
-    <p id="feels"></p>
+  <button id="darkToggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
+
+  <div class="app">
+    <h1>Weather App</h1>
+    <div class="search-box">
+      <input type="text" id="cityInput" placeholder="Enter city name" />
+      <button onclick="getWeather()">Search</button>
+    </div>
+
+    <div id="loader" class="loader" style="display:none;"></div>
+    <div id="weatherResult" class="weather-card"></div>
+
+    <section class="info-section">
+      <h2>About</h2>
+      <p>This app was built by <strong>Sajidali Momin</strong> using HTML, CSS, JavaScript, and the OpenWeather API. It supports city search, dark mode, geolocation, and App installation.</p>
+    </section>
+
+    <section class="info-section">
+      <h2>Contact</h2>
+      <p>Email: mominsajidali.play@gmail.com</p>
+      <p>GitHub: <a href="https://github.com/sajidali440" target="_blank">sajidali440</a></p>
+    </section>
   </div>
 
-  <button class="dark-toggle" onclick="toggleDarkMode()">Dark Mode</button>
-  
   <script src="script.js"></script>
+  <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("service-worker.js")
+        .then(() => console.log("Service Worker Registered"));
+    }
+  </script>
 </body>
 </html>
