--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>🌤 WeatherNow</h1>
+      <h1>🌤 WeatherApp</h1>
       <div class="controls">
         <button id="themeToggle" title="Toggle Dark/Light Mode">🌓</button>
         <select id="unitToggle" title="Temperature Unit">
