--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WeatherNow</title>
+  <title>WeatherApp</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" href="https://openweathermap.org/img/wn/01d.png" />
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>🌤 WeatherNow</h1>
+      <h1>🌤 WeatherAPP</h1>
       <div class="controls">
         <button id="themeToggle" title="Toggle Dark/Light Mode">🌓</button>
         <select id="unitToggle" title="Temperature Unit">
