--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker.register("service-worker.js")
         .then(() => console.log("✅ Service Worker Registered"))
-        .catch(err => console.error("Service Worker registration failed:", err));
+        .catch(err => console.error("Service Worker registration failed:", error));
     }
   </script>
 </body>
