--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <script defer src="script.js"></script>
 </head>
 <body>
+  <!-- Animated Weather Background -->
+  <div id="weather-animation">
+    <div class="sun"></div>
+    <div class="cloud cloud1"></div>
+    <div class="cloud cloud2"></div>
+    <div class="rain"></div>
+    <div class="lightning"></div>
+  </div>
+
   <div class="container">
     <header>
       <h1>🌤 WeatherNow</h1>
